--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,7 +4,7 @@
 
 - name: Petteri Ponkkala
   image: petteri.png
-  title: Co-Founder
+  title: Co-Founder, Chief Product Officer
   
 - name: Dr. Annina Ruottu
   image: annina.png
@@ -12,7 +12,7 @@
 
 - name: Dr Clarence Tan
   image: clarence.png
-  title: Chief Product Officer
+  title: Exponential Technology and AI
 
 - name: Kim Hansen
   image: kim.png
